Use system R site-library in CI and Docker
Set R_LIBS_SITE to /usr/local/lib/R/site-library in the GitHub Actions workflow to ensure the container system library is used instead of a per-user lib. Add debug messages in the test step to print R version and library paths for easier diagnosis. In the Dockerfile, restore renv to the system library and add a post-restore check that fails the build if critical packages (shiny, shinyFeedback, shinyjs, testthat, rsconnect) are missing. These changes improve reproducibility in CI and surface missing dependency issues early.

--- a/.github/workflows/r-ci-cd.yml
+++ b/.github/workflows/r-ci-cd.yml
@@ -65,7 +65,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     env:
       RENV_CONFIG_ACTIVATE: "FALSE"
-      R_LIBS_USER: ""
+      R_LIBS_SITE: "/usr/local/lib/R/site-library"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -74,8 +74,11 @@ jobs:
       
       - name: Run tests
         run: |
+          # Debug environment
+          message("R Version: ", getRversion())
+          message("Library Paths: ", paste(.libPaths(), collapse = ", "))
+          
           # The environment is already correctly set up in the container system library
-          # We disable renv activation to ensure system libraries are used
           library(testthat)
           results <- test_dir("tests/testthat", reporter = "summary")
           
@@ -123,7 +126,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     env:
       RENV_CONFIG_ACTIVATE: "FALSE"
-      R_LIBS_USER: ""
+      R_LIBS_SITE: "/usr/local/lib/R/site-library"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
