Simplify CI summaries and add Docker package checks
Clean up CI step summaries by removing emojis and replacing visual check/cross marks with plain text labels for readability. Dockerfile: after renv::restore, explicitly install and verify critical R packages into /usr/local/lib/R/site-library, emitting clearer success/error messages and failing the build if packages are missing. R/filter_module_server.R: replace glyph-based validation output with plain "Valid"/"Invalid" strings for cleaner logs. README: swap the Unicode arrow for an ASCII '->' in the feature list.

--- a/.github/workflows/r-ci-cd.yml
+++ b/.github/workflows/r-ci-cd.yml
@@ -101,7 +101,7 @@ jobs:
           # Generate GitHub Step Summary
           summary_file <- Sys.getenv("GITHUB_STEP_SUMMARY")
           if (summary_file != "") {
-            cat("# 🧪 Test Results Summary (Docker Recycling)\n\n", file = summary_file)
+            cat("# Test Results Summary (Docker Recycling)\n\n", file = summary_file)
             cat(paste0("> [!TIP]\n> Image recycled: **", "${{ needs.build-image.outputs.exists == 'true' }}", "**\n\n"), file = summary_file, append = TRUE)
             
             # Create a summary table
@@ -113,16 +113,16 @@ jobs:
             cat("| Metric | Value |\n", file = summary_file, append = TRUE)
             cat("| :--- | :--- |\n", file = summary_file, append = TRUE)
             cat(paste0("| **Total Test Files** | ", total, " |\n"), file = summary_file, append = TRUE)
-            cat(paste0("| **Passed** | ✅ ", passed, " |\n"), file = summary_file, append = TRUE)
-            cat(paste0("| **Failed/Error** | ", ifelse(failed > 0, paste0("❌ ", failed), "None"), " |\n\n"), file = summary_file, append = TRUE)
+            cat(paste0("| **Passed** | PASSED: ", passed, " |\n"), file = summary_file, append = TRUE)
+            cat(paste0("| **Failed/Error** | ", ifelse(failed > 0, paste0("FAILED: ", failed), "None"), " |\n\n"), file = summary_file, append = TRUE)
             
             if (failed > 0) {
-              cat("## ❌ Failures\n\n", file = summary_file, append = TRUE)
+              cat("## Failures\n\n", file = summary_file, append = TRUE)
               for (i in which(df_results$failed > 0 | df_results$error > 0)) {
                 cat(paste0("- **", df_results$file[i], "**: ", df_results$failed[i], " failures, ", df_results$error[i], " errors\n"), file = summary_file, append = TRUE)
               }
             } else {
-              cat("## ✅ All tests passed successfully in container!\n", file = summary_file, append = TRUE)
+              cat("## All tests passed successfully in container!\n", file = summary_file, append = TRUE)
             }
           }
           
@@ -190,10 +190,10 @@ jobs:
           # Generate GitHub Step Summary
           summary_file <- Sys.getenv("GITHUB_STEP_SUMMARY")
           if (summary_file != "") {
-            cat("# 🚀 Deployment Summary (Docker Recycling)\n\n", file = summary_file)
+            cat("# Deployment Summary (Docker Recycling)\n\n", file = summary_file)
             cat(paste0("> [!TIP]\n> Image recycled: **", "${{ needs.build-image.outputs.exists == 'true' }}", "**\n\n"), file = summary_file, append = TRUE)
-            cat("✅ **Status**: Successfully deployed to shinyapps.io from container\n", file = summary_file, append = TRUE)
-            cat(paste0("🔗 **App URL**: [", deployment$url, "](", deployment$url, ")\n"), file = summary_file, append = TRUE)
-            cat(paste0("📅 **Time**: ", format(Sys.time(), "%Y-%m-%d %H:%M:%S %Z"), "\n"), file = summary_file, append = TRUE)
+            cat("**Status**: Successfully deployed to shinyapps.io from container\n", file = summary_file, append = TRUE)
+            cat(paste0("App URL: [", deployment$url, "](", deployment$url, ")\n"), file = summary_file, append = TRUE)
+            cat(paste0("Time: ", format(Sys.time(), "%Y-%m-%d %H:%M:%S %Z"), "\n"), file = summary_file, append = TRUE)
           }
         shell: Rscript {0}
