--- a/.github/workflows/r-ci-cd.yml
+++ b/.github/workflows/r-ci-cd.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main, master ]
 
+# Prevent parallel deployments from conflicting on shinyapps.io
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   R_CLI_UNICODE: "false"
 
