Refactor init, constants, validation & logging
Introduce centralized app initialization and constants, harden validation, and improve observability and reproducibility. Added R/config.R, R/constants.R and R/init.R (app.R now sources init.R). Validation functions were strengthened (type/length/finiteness checks) and now rely on constants to avoid drift. Logger rewritten to emit single-line JSON with helper sugars and session correlation IDs. Filter module UI/server were cleaned up (constants for labels, DEFAULT_DATE, cascading logic, better feedback, reset/return API) and server now instantiates the module once and uses disabled apply button behavior. CI workflow now checks renv synchronization and runs styler, and Docker base image is pinned by digest for deterministic builds. Tests and README updated to reflect behavior and new invariants.

--- a/.github/workflows/r-ci-cd.yml
+++ b/.github/workflows/r-ci-cd.yml
@@ -98,11 +98,20 @@ jobs:
       
       - name: Run tests
         run: |
-          # Debug environment
-          message("R Version: ", getRversion())
-          message("Library Paths: ", paste(.libPaths(), collapse = ", "))
+          # 1. Verify dependency integrity
+          if (!renv::status()$synchronized) {
+            stop("renv.lock is out of sync with installed packages. Please run renv::snapshot() locally.")
+          }
           
-          # The environment is already correctly set up in the container system library
+          # 2. Check code style (Point 26)
+          # We only warn here but could stop if desired
+          if (!requireNamespace("styler", quietly = TRUE)) install.packages("styler")
+          style_res <- styler::style_dir("R", dry = "on")
+          if (any(style_res$changed)) {
+            message("WARNING: Code style issues detected. Please run styler::style_dir() locally.")
+          }
+          
+          # 3. Run test suite with strict warnings
           library(testthat)
           results <- test_dir("tests/testthat", reporter = "summary")
           
