Set NOT_CRAN in CI and add test helper
Add NOT_CRAN="true" to the R GitHub Actions workflow environment and introduce tests/testthat/helper-sourcing.R. The new helper sources R/init.R so package/application constants and functions are available to tests and sets options(poc.test_mode = TRUE) to put the code into a testing state.

--- a/.github/workflows/r-ci-cd.yml
+++ b/.github/workflows/r-ci-cd.yml
@@ -90,6 +90,7 @@ jobs:
     env:
       RENV_CONFIG_ACTIVATE: "FALSE"
       R_LIBS_SITE: "/usr/local/lib/R/site-library"
+      NOT_CRAN: "true"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
