Make startup sourcing robust and remove launcher
Improve app startup robustness for deployment: source core R files into .GlobalEnv, add a fallback log_info and defensive checks so logging calls in R/data.R won't fail if logger isn't available yet, and ensure utilities/modules are sourced with global visibility. Remove the custom launch.R (deleted) and simplify shinyapps.yml to rely on renv/deterministic builds, set primaryDoc to app.R and bump the R runtime version to 4.5.2.

--- a/shinyapps.yml
+++ b/shinyapps.yml
@@ -1,24 +1,12 @@
 # Configuration file for shinyapps.io
-# This file helps set dependencies for rsconnect deployments
+# Documentation: https://docs.posit.co/shinyapps.io/getting-started.html#deploying-applications
 
-# Define required packages that will be installed by shinyapps.io
-packages:
-  - shiny
-  - shinyFeedback
-  - shinyjs
-  - tibble
-  - dplyr
-  - magrittr  # For the pipe operator
-  - tidyr
-  - readr
-
-# Tell rsconnect if this is a Shiny app
-appType: shiny
-
-# Primary file to use for deployment
+# Primary entry point
 primaryDoc: app.R
 
-# Configure the server - these are sensible defaults
+# environment setup
+# We rely on renv.lock for deterministic builds. 
+appType: shiny
 runtime: R
-version: 4.2.0
+version: 4.5.2
 locale: en_US
